Software/PSOC/ToF/Design01.cydsn/BUILD.log
--------------- Build Started: 04/16/2019 16:16:26 Project: Design01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/ToF.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -x c++ -std=c++1z -fno-exceptions -c ToF.c -o .\CortexM3\ARM_GCC_541\Debug\ToF.o
ToF.c: In member function 'void ToF::start()':
ToF.c:24:23: error: expected primary-expression before '.' token
     isr_1_StartEx(&ToF.isr_handler);
                       ^
ToF.c: In member function 'void ToF::stop()':
ToF.c:34:22: error: expected primary-expression before '.' token
     isr_1_StopEx(&ToF.isr_handler);
                      ^
ToF.c:34:34: error: 'isr_1_StopEx' was not declared in this scope
     isr_1_StopEx(&ToF.isr_handler);
                                  ^
ToF.c: In static member function 'static void ToF::isr_handler()':
ToF.c:41:4: error: invalid use of member 'ToF::byteR' in static member function
    byteR = SPIS_ReadRxData();                                          // Gemmer aflæsning af RX-buffer
    ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:43:9: error: invalid use of member 'ToF::byteR' in static member function
     if (byteR == 0)
         ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:44:9: error: invalid use of member 'ToF::i' in static member function
         i = 0;
         ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
ToF.c:46:13: error: invalid use of member 'ToF::i' in static member function
     switch (i)
             ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
ToF.c:50:9: error: invalid use of member 'ToF::i' in static member function
         i++;
         ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
ToF.c:54:9: error: invalid use of member 'ToF::byteR' in static member function
         byteR --;
         ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:55:9: error: 's1' was not declared in this scope
         s1 = byteR<<8;
         ^
ToF.c:55:14: error: invalid use of member 'ToF::byteR' in static member function
         s1 = byteR<<8;
              ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:56:9: error: invalid use of member 'ToF::i' in static member function
         i++;
         ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
ToF.c:60:9: error: invalid use of member 'ToF::byteR' in static member function
         byteR --;
         ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:61:17: error: invalid use of member 'ToF::byteR' in static member function
         s1 = s1|byteR;
                 ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:62:17: error: invalid use of member 'ToF::string' in static member function
         sprintf(string, "Sensor 1: %d \n\r", s1);
                 ^
In file included from ToF.c:12:0:
ToF.h:39:19: note: declared here
     char string[50];
                   ^
ToF.c:62:48: error: 'sprintf' was not declared in this scope
         sprintf(string, "Sensor 1: %d \n\r", s1);
                                                ^
ToF.c:63:26: error: invalid use of member 'ToF::string' in static member function
         UART_1_PutString(string);
                          ^
In file included from ToF.c:12:0:
ToF.h:39:19: note: declared here
     char string[50];
                   ^
ToF.c:64:9: error: invalid use of member 'ToF::i' in static member function
         i++;
         ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
ToF.c:68:9: error: invalid use of member 'ToF::byteR' in static member function
         byteR --;
         ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:69:9: error: 's2' was not declared in this scope
         s2 = byteR<<8;
         ^
ToF.c:69:14: error: invalid use of member 'ToF::byteR' in static member function
         s2 = byteR<<8;
              ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:70:9: error: invalid use of member 'ToF::i' in static member function
         i++;
         ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
ToF.c:74:9: error: invalid use of member 'ToF::byteR' in static member function
         byteR --;
         ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:75:17: error: invalid use of member 'ToF::byteR' in static member function
         s2 = s2|byteR;
                 ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:76:17: error: invalid use of member 'ToF::string' in static member function
         sprintf(string, "Sensor 2: %d \n\r", s2);
                 ^
In file included from ToF.c:12:0:
ToF.h:39:19: note: declared here
     char string[50];
                   ^
ToF.c:77:26: error: invalid use of member 'ToF::string' in static member function
         UART_1_PutString(string);
                          ^
In file included from ToF.c:12:0:
ToF.h:39:19: note: declared here
     char string[50];
                   ^
ToF.c:78:9: error: invalid use of member 'ToF::i' in static member function
         i++;
         ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
ToF.c:82:9: error: invalid use of member 'ToF::byteR' in static member function
         byteR --;
         ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:83:9: error: 's3' was not declared in this scope
         s3 = byteR<<8;
         ^
ToF.c:83:14: error: invalid use of member 'ToF::byteR' in static member function
         s3 = byteR<<8;
              ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:84:9: error: invalid use of member 'ToF::i' in static member function
         i++;
         ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
ToF.c:88:9: error: invalid use of member 'ToF::byteR' in static member function
         byteR --;
         ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:89:17: error: invalid use of member 'ToF::byteR' in static member function
         s3 = s3|byteR;
                 ^
In file included from ToF.c:12:0:
ToF.h:38:13: note: declared here
     uint8_t byteR;  
             ^
ToF.c:90:17: error: invalid use of member 'ToF::string' in static member function
         sprintf(string, "Sensor 3: %d \n\r", s3);
                 ^
In file included from ToF.c:12:0:
ToF.h:39:19: note: declared here
     char string[50];
                   ^
ToF.c:91:26: error: invalid use of member 'ToF::string' in static member function
         UART_1_PutString(string);
                          ^
In file included from ToF.c:12:0:
ToF.h:39:19: note: declared here
     char string[50];
                   ^
ToF.c:92:9: error: invalid use of member 'ToF::i' in static member function
         i++;
         ^
In file included from ToF.c:12:0:
ToF.h:37:13: note: declared here
     uint8_t i;
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 04/16/2019 16:16:26 ---------------
